# docs/swagger.json
@@ -1522,6 +1522,10 @@
     "definitions": {
         "models.AccountRequest": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
                 "password": {
                     "type": "string"
